Native/Test/KL/error-boolean-and-lvalue.out
error-boolean-and-lvalue.kl:10:3: error: cannot resolve call for foo(Integer)
candidates are:
  foo(io Integer)
